# E-Shop-Scrapper-PRO

./: .gitignore  e_shop_scrapper_pro.py  main.py  mainly.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: python-package.yml
escrapper/: config.py  scrapping_parser.py  setup_scrapper.py
tests/: test_scrapper.py
